[package]
name = "jet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
ciborium = "0.2.1"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
fs2 = "0.4.3"
futures = "0.3.29"
hex = "0.4.3"
libflate = "2.0.0"
meowhash = "0.3.0"
once_cell = "1.18.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
symlink = "0.1.0"
syntect = "5.1.0"
tar = "0.4.40"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
